[project]
name = "openenv-decisionsimenv"
version = "1.0.0"
description = "Universal Decision Stress-Tester — OpenEnv Hackathon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "openai>=1.0.0",
    "requests>=2.25.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tavily-python",
    "aiofiles",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools]
py-modules = ["app", "environment", "graders", "math_graders", "models", "storage", "test_cases", "inference"]
